<resources>
    <string name="app_name">Zlux</string>
    <string name="title_favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="welcome">Welcome 👋</string>
    <string name="sub_text">Let\'s relax and watch a movie !</string>
    <string name="search_movie">Search movie...</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="bookmark">Bookmark</string>
    <string name="error_data">Opss... something went wrong</string>
    <string name="title_movie">Title movie</string>
    <string name="detail_information">Detail information</string>
    <string name="release">Release :</string>
    <string name="genre">Genre :</string>
    <string name="overview">Overview</string>
    <string name="description_movie">description movie</string>
    <string name="views">xxx.xxx</string>
    <string name="rating">rating</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_follow_system" translatable="false">follow_system</string>
</resources>